objects/CaseArticle__c.object
<CustomObject>
    <fields>
        <fullName>ArticleVersionNumber__c</fullName>
        <label>ArticleVersionNumber</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <label>Case ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>CreatedById</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSharedByEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSharedByEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>KnowledgeArticle ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CaseArticle__c</label>
    <nameField>
        <label>CaseArticle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseArticle__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>